package Main;

/**
 * Main Klass och metod.
 */
public class Bot {
    public static void main(String[] args) throws Exception{
        Controller ctrl = new Controller();
    }
}

