@startuml

title __MAIN's Class Diagram__\n

  namespace Main {
    class Main.Bot {
        {static} + main()
    }
  }
  

  namespace Main {
    class Main.Controller {
        - waiter : EventWaiter
        + Controller()
        + getCmdMap()
        + processMessage()
        - addCommands()
    }
  }
  

  namespace Main {
    class Main.EventListener {
        {static} + prefix : char
        + EventListener()
        + getPrefix()
        + onGuildBan()
        + onGuildJoin()
        + onGuildMessageReceived()
        + onRoleCreate()
        {static} + setPrefix()
    }
  }
  

  namespace Main {
    class Main.Token {
        - token : String
        + Token()
        + getToken()
    }
  }
  

  Main.Controller o-- Commands.CommandMap : cmdMap
  Main.Controller o-- EconomyModule.EconomyController : economyController
  Main.Controller o-- Commands.ErrorCommand : error
  Main.Controller o-- ModerationModule.ModerationController : modCtrl
  Main.Controller o-- MusicModule.MusicController : musicController
  Main.Controller o-- QuizModule.QuizCommand : quizCommand
  Main.Controller o-- Main.Token : token
  Main.EventListener -up-|> net.dv8tion.jda.api.hooks.ListenerAdapter
  Main.EventListener o-- Main.Controller : ctrl
  Main.EventListener o-- Commands.ErrorCommand : error


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
